# knotify

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml  config_safe.toml  config_safe.yaml  knotify_state.json
.github/workflows/: build.yml
src/: config.rs  main.rs  status.rs  types.rs
src/notifier/: discord.rs  mod.rs
src/platform/: bilibili.rs  mod.rs  youtube.rs
