[package]
name = "knotify"
version = "0.2.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true          
opt-level = "z"     
strip = true        
panic = "abort"     
codegen-units = 1   